# RacingToHell

./: .gitignore  .gitlab-ci.yml  .gitlab-ci.yml.disabled  .travis.yml  AICar.cpp  AICar.h  Boss_8cpp.html  Bullet.cpp  Bullet.h  CMakeLists.txt  Car.cpp  Car.h  CarFactory.cpp  CarFactory.h  Cars.h  Collision_8cpp.html  Collision_8h.html  Collision_8h_source.html  Demos_8cpp.html  Dockerfile  Doxyfile  EnergyCanister.cpp  EnergyCanister.h  EventHandler.cpp  Font.cpp  Font.h  Framework.cpp  Framework.hpp  GameDemo_8cpp.html  GameMenu_8cpp.html  GameMenu_8h.html  GameMenu_8h_source.html  GameObject.cpp  GameObject.h  GameObjectContainer.cpp  GameObjectContainer.h  GameObjectFactory.cpp  GameObjectFactory.h  GameObjects.h  GameOverScreen.cpp  (+255 more)
Headers/: Collision.h  Communication.h  Enums.h  EventHandler.h  Framework.hpp  GameState.h  HeadsUpDisplay.h  Highscore.h  PlayerStats.h  Renderer.h  Serializable.h  StandardCursor.h  Updater.h  stdafx.h
Source/: CMakeLists.txt  Collision.cpp  EventHandler.cpp  Framework.cpp  HeadsUpDisplay.cpp  Highscore.cpp  RacingToHell.cpp  Renderer.cpp  Serializable.cpp  StandardCursor.cpp  Textbox.cpp  Updater.cpp  stdafx.cpp
Source/Animation/: Animation.cpp  CMakeLists.txt  Explosion.cpp  MechLegs.cpp  MechTop.cpp
Source/Framework/: CMakeLists.txt  EventHandler.cpp  Framework.cpp  GameObjectManager.cpp  HighscoreManager.cpp  LevelManager.cpp  Manager.cpp  NetworkManager.cpp  OptionsManager.cpp  PlayerScore.cpp  Renderer.cpp  SoundManager.cpp  Updater.cpp
Source/GameObject/: AICar.cpp  BossCar.cpp  BossCarOld.cpp  Bullet.cpp  CMakeLists.txt  Car.cpp  Carrier.cpp  EnergyCanister.cpp  GameObject.cpp  GameObjectContainer.cpp  GameObjectFactory.cpp  PlayerCar.cpp  Tank.cpp  Toolbox.cpp
Source/GameObject/Boss/: BossCar.cpp  CMakeLists.txt  Carrier.cpp  Jet.cpp  Mech.cpp  Tank.cpp
Source/GameObject/Boss/Action/: BossAction.cpp  CMakeLists.txt  DriveToDefault.cpp  MoveLeftRight.cpp  MoveToPosition.cpp  PointGunAtPlayer.cpp  RotateGunToPlayer.cpp  RotateGunToPosition.cpp  Shoot.cpp  ShootAtPlayer.cpp  Spin.cpp  TimerAction.cpp
Source/Level/: Level.cpp
Source/Menu/: AboutScreen.cpp  Countdown.cpp  GameOverScreen.cpp  HighscoreMenu.cpp  LevelUpScreen.cpp  LoadingScreen.cpp  MainMenu.cpp  Menu.cpp  MenuButton.cpp  MenuItem.cpp  MultiplayerLobby.cpp  MultiplayerMenu.cpp  Options.cpp  OptionsMenu.cpp  PauseMenu.cpp  PauseMultiplayerMenu.cpp  Slider.cpp  StatBox.cpp  Textbox.cpp
Source/Menu/MenuItem/: ComboBox.cpp  HighscoreList.cpp  MenuButton.cpp  MenuItem.cpp  PlayerTable.cpp  Slider.cpp  StatBox.cpp  Textbox.cpp
Source/Multiplayer/: CMakeLists.txt  ClientGameObjectContainer.cpp  HostGameObjectContainer.cpp  MPGameObjectContainer.cpp  NetworkHandle.cpp
Source/Screen/: EmptyScreen.cpp  ExitScreen.cpp  GameObjectScreen.cpp  GameScreen.cpp  GameScreenFactory.cpp  HUDScreen.cpp  LevelScreen.cpp  LevelUpScreen.cpp  LoadingScreen.cpp
Source/Screen/Menu/: AboutMenu.cpp  Countdown.cpp  GameOverMenu.cpp  HighscoreMenu.cpp  MainMenu.cpp  Menu.cpp  MultiplayerLobby.cpp  MultiplayerMenu.cpp  OptionsMenu.cpp  PauseMenu.cpp  PauseMultiplayerMenu.cpp
Source/Screen/Menu/MenuItem/: ComboBox.cpp  HighscoreList.cpp  MenuButton.cpp  MenuItem.cpp  PlayerTable.cpp  Slider.cpp  StatBox.cpp  Textbox.cpp
Source/Test/: BossActionTest.cpp  CMakeLists.txt  HelperTest.cpp  HighscoreManagerTest.cpp  PlayerScoreTest.cpp  RunTests.cpp  Test.cpp  TestBoss.cpp
Source/UserInterface/: CMakeLists.txt  GameScreenFactory.cpp
Source/UserInterface/Menu/: AboutMenu.cpp  CMakeLists.txt  Countdown.cpp  GameOverMenu.cpp  HighscoreMenu.cpp  MainMenu.cpp  Menu.cpp  MultiplayerLobby.cpp  MultiplayerMenu.cpp  OptionsMenu.cpp  PauseMenu.cpp  PauseMultiplayerMenu.cpp
Source/UserInterface/Menu/MenuItem/: CMakeLists.txt  CheckBox.cpp  ComboBox.cpp  HighscoreList.cpp  MenuButton.cpp  MenuItem.cpp  PlayerTable.cpp  Slider.cpp  StatBox.cpp  Textbox.cpp
Source/UserInterface/Screen/: CMakeLists.txt  DebugScreen.cpp  EmptyScreen.cpp  ExitScreen.cpp  GameObjectScreen.cpp  GameScreen.cpp  HUDScreen.cpp  LevelScreen.cpp  LevelUpScreen.cpp  LoadingScreen.cpp
android/: build.gradle  gradle.properties  settings.gradle
android/app/: CMakeLists.txt  build.gradle  proguard-rules.pro
android/app/src/androidTest/java/game/racingtohell/: ExampleInstrumentedTest.java
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: FileUtils.java  OpenGL.cpp  OpenGL.h  android_RacingToHell.cpp  android_RacingToHell.h
android/app/src/main/java/game/racingtohell/: GLSurfaceViewWrapper.java  MainActivity.java  NativeWrapper.java  RendererWrapper.java
android/app/src/main/res/layout/: main.xml
android/app/src/main/res/values/: colors.xml  strings.xml  styles.xml
android/app/src/main/res/values-v21/: styles.xml
android/app/src/test/java/game/racingtohell/: ExampleUnitTest.java
buildMinGW/: CMakeCache.txt  Makefile  cmake_install.cmake
cmake-modules/: FindSFML.cmake
linux/: Makefile  linux_RacingToHell.cpp  linux_RacingToHell.h
res/: icon.xbm
search/: all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  classes_f.js  defines_0.js  (+94 more)
src/: Boss.cpp  Boss.h  CMakeLists.txt  Collision.cpp  Collision.h  Demos.cpp  Demos.h  Font.cpp  Font.h  GameDemo.cpp  GameDemo.h  GameMenu.cpp  GameMenu.h  Helper.cpp  Helper.h  Init.cpp  Init.h  Math.cpp  Math.h  Memory.cpp  Memory.h  Menu.cpp  Menu.h  MyMath.cpp  MyMath.h  OpenGL.cpp  Platform.h  Player.cpp  Player.h  RacingToHell.cpp  RacingToHell.h  Renderer.cpp  Renderer.h  Resources.cpp  Resources.h  Shader.cpp  Shader.h  Sound.cpp  Sound.h  hot_reload.cpp  (+2 more)
src/glad/include/glad/: glad.h
src/glad/src/: glad.c
tools/: resource_finalizer.cpp  (+1 more)
(+180 files in other folders)
